--- a/index.html
+++ b/index.html
@@ -12,4 +12,44 @@
     <title>Página de clima</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="temperature-now">
+        <div class="location">
+          <img src="./assets/pin.svg" alt="icone de localizacao" />
+          <strong>Rio do Sul, SC</strong>
+        </div>
+        <div class="temp">
+          <div class="number">
+            18
+            <div class="maxmin">22° <span>16° </span></div>
+          </div>
+          <div class="celsius">°C</div>
+        </div>
+        <div class="statistics">
+          <div class="stats">
+            <img src="./assets/temp-wind.svg" alt="icone de vento" />
+            <div class="info">
+              <p>Vento</p>
+              <h5>17 <span>km/h</span></h5>
+            </div>
+          </div>
+          <div class="stats">
+            <img src="./assets/temp-humidity.svg" alt="icone de umidade" />
+            <div class="info">
+              <p>Umidade</p>
+              <h5>31 <span>%</span></h5>
+            </div>
+          </div>
+          <div class="stats">
+            <img src="./assets/temp-rain.svg" alt="icone de chuva" />
+            <div class="info">
+              <p>Chuva</p>
+              <h5>10 <span>%</span></h5>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
+</html>
