--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
           </div>
         </div>
       </section>
+
+      <section class="air-quality">
+        <h2 class="title">
+          <img src="./assets/leaf.svg" alt="icone de folha de árvore" />
+          Qualidade do ar
+        </h2>
+
+        <p class="good">Boa</p>
+        <p class="number">21</p>
     </main>
   </body>
 </html>
