--- a/index.html
+++ b/index.html
@@ -59,6 +59,34 @@
 
         <p class="good">Boa</p>
         <p class="number">21</p>
+
+        <div class="info">
+          <div class="number">
+            <p>12.9</p>
+            <small>PM2.5</small>
+          </div>
+          <div class="number">
+            <p>12.9</p>
+            <small>PM10</small>
+          </div>
+          <div class="number">
+            <p>2.1</p>
+            <small>SO₂</small>
+          </div>
+          <div class="number">
+            <p>1.4</p>
+            <small>NO₂</small>
+          </div>
+          <div class="number">
+            <p>21.2</p>
+            <small>O₃</small>
+          </div>
+          <div class="number">
+            <p>0.7</p>
+            <small>CO</small>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
