--- a/index.html
+++ b/index.html
@@ -87,6 +87,31 @@
           </div>
         </div>
       </section>
+
+      <section class="sun-time">
+        <h2 class="title">
+          <img
+            src="./assets/sun-time.svg"
+            alt="icone de um sol com um relógio dentro"
+          />
+          Horário do sol
+        </h2>
+        <div class="sun-chart-wrapper">
+          <div class="sun-chart">
+            <div class="chart">
+              <img
+                src="./assets/sun-chart.svg"
+                alt="imagem de um gráfico semi circulo com traços"
+              />
+            </div>
+            <time class="now">17:48</time>
+          </div>
+        </div>
+        <div class="time">
+          <time class="sunrise">06:00</time>
+          <time class="sunset">18:52</time>
+        </div>
+      </section>
     </main>
   </body>
 </html>
