--- a/index.html
+++ b/index.html
@@ -112,6 +112,38 @@
           <time class="sunset">18:52</time>
         </div>
       </section>
+
+      <section class="week-weather">
+        <div class="day">
+          <h4 class="title">Amanhã</h4>
+          <img src="./assets/weather-clouds.svg" alt="" />
+          <p class="maxmin">21° <span>16°</span></p>
+        </div>
+
+        <div class="day">
+          <h4 class="title">Sexta</h4>
+          <img src="./assets/weather-sun.svg" alt="" />
+          <p class="maxmin">28° <span>16°</span></p>
+        </div>
+
+        <div class="day">
+          <h4 class="title">Sábado</h4>
+          <img src="./assets/weather-rain.svg" alt="" />
+          <p class="maxmin">20° <span>16°</span></p>
+        </div>
+
+        <div class="day">
+          <h4 class="title">Domingo</h4>
+          <img src="./assets/weather-thunder.svg" alt="" />
+          <p class="maxmin">28° <span>26°</span></p>
+        </div>
+
+        <div class="day">
+          <h4 class="title">Segunda</h4>
+          <img src="./assets/weather-cloudy.svg" alt="" />
+          <p class="maxmin">26° <span>20°</span></p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
